--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     },
     "dependencies": {
         "async": "^3.2.0",
+        "body-parser": "^1.18.3",
+        "cloudinary": "^1.25.0",
         "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
         "debug": "~2.6.9",
         "ejs": "~2.6.1",
         "ejs-locals": "^1.0.2",
